--- a/pages/veg.html
+++ b/pages/veg.html
@@ -11,37 +11,39 @@
 
     <header class="head">
 
-        <div>
-            <a href="./profile.html">
-                <button class="non-veg">
-                    profile
-                </button>
-            </a>
+        <a href="./profile.html">
+            <button class="non-veg">
+                profile
+            </button>
+        </a>
 
-            <!-- <a href="./pages/log.html">
-                    <button class="login-btn">
-                        Login
-                    </button> 
+        <!-- <a href="./pages/log.html">
+                <button class="login-btn">
+                    Login
+                </button> 
 
-                </a> -->
-           
-            <a href="./veg.html">
-                <button class="Veg-Recipe">
-                    Add New
-                </button>
-            </a>
-            <a href="./non-veg.html">
-                <button class="non-veg">
-                    NonVeg
-                </button>
-            </a>
-            <a href="./snacks.html">
-                <button class="snacks">
-                    Snacks
-                </button>
-            </a>
-
-
+            </a> -->
+       
+        <a href="./veg.html">
+            <button class="Veg-Recipe">
+                Veg Recipe
+            </button>
+        </a>
+        <a href="./non-veg.html">
+            <button class="non-veg">
+                NonVeg
+            </button>
+        </a>
+        <a href="./snacks.html">
+            <button class="snacks">
+                Snacks
+            </button>
+        </a>
+        <a href="./addnon.html">
+            <button class="Veg-Recipe">
+                Add New
+            </button>
+        </a>
             <div class="header">
                 <img class="logo" src="../assets/images/yellow logo.png" height="50px" width="50px" alt="logo">
                 <h1>RECIPE</h1>
@@ -66,9 +68,9 @@
 
         let recipelist = JSON.parse(localStorage.getItem("newRecipe"));
         console.log(recipelist);
-
+        const varitiesType = recipelist.filter((h)=> h.Varities == "Veg");
         for (i = 0; i < recipelist.length; i++) {
-            recipe.push(recipelist[i]);
+            recipe.push(varitiesType[i]);
             console.log(recipe);
         }
 
