--- a/pages/home.html
+++ b/pages/home.html
@@ -1,11 +1,10 @@
 <html lang="en">
-
 <head>
     <link rel="stylesheet" href="../assets/style/home.css">
     <title>cooking website</title>
     <meta name="view port" content="width=device-width, initial-scale=1.0">
-
 </head>
+
 <body>
     <header class="head">
         <div>
@@ -18,7 +17,6 @@
                     <button class="login-btn">
                         Login
                     </button> 
-
                 </a> -->
             <a href="./veg.html">
                 <button class="Veg-Recipe">
@@ -51,19 +49,19 @@
     </div>
     <script>
         const recipe = [];
-         let recipelist = JSON.parse(localStorage.getItem("newRecipe"));
+        let recipelist = JSON.parse(localStorage.getItem("newRecipe"));
         console.log(recipelist);
         for (i = 0; i < recipelist.length; i++) {
             recipe.push(recipelist[i]);
             console.log(recipe);
-        } 
+        }
         for (let i = 0; i < recipe.length; i++) {
             let div_recipe = document.createElement("div");
             div_recipe.classList.add("recipe");
             let recipe_img = document.createElement("img");
             recipe_img.classList.add("recipe-img");
-            recipe_img.setAttribute("height", "300px")
-            recipe_img.setAttribute("width", "500px")
+            recipe_img.setAttribute("height", "300px");
+            recipe_img.setAttribute("width", "500px");
 
             let recipe_about = document.createElement("div");
             recipe_about.classList.add("about");
@@ -80,7 +78,7 @@
             recipe_description.textContent = recipe[i].message;
             detail_btn.href = "page4.html?id=" + recipe[i].recipe_id;
             detail_btn.innerText = "Details"
-            
+
             div_recipe.appendChild(recipe_img);
             recipe_about.appendChild(recipe_title);
             recipe_about.appendChild(recipe_description);
@@ -90,6 +88,7 @@
             console.log(div_recipe);
             document.querySelector(".all-recipe").append(div_recipe);
         }
+        
     </script>
     <!-- <footer class="footer">
             <div class="container">
@@ -124,23 +123,25 @@
                 </div>
             </div>
         </footer> -->
-         <footer>
-            <div class="container">
-              <div class="row">
+    <footer>
+        <div class="container">
+            <div class="row">
                 <div class="col-md-6">
-                  <h3>About Us</h3>
-                  <p>We are a team of food enthusiasts who love to share our favorite recipes with others. Our mission is to inspire people to cook delicious and healthy meals at home.</p>
+                    <h3>About Us</h3>
+                    <p>We are a team of food enthusiasts who love to share our favorite recipes with others. Our mission
+                        is to inspire people to cook delicious and healthy meals at home.</p>
                 </div>
                 <div class="col-md-6">
-                  <h3>Contact Us</h3>
-                  <ul>
-                    <li><a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></li>
-                    <li>123 Main Street</li>
-                    <li>City, State Zip</li>
-                  </ul>
+                    <h3>Contact Us</h3>
+                    <ul>
+                        <li><a href="mailto:info@yourwebsite.com">info@yourwebsite.com</a></li>
+                        <li>123 Main Street</li>
+                        <li>City, State Zip</li>
+                    </ul>
                 </div>
-              </div>
             </div>
-          </footer>
+        </div>
+    </footer>
 </body>
+
 </html>
