--- a/pages/snacks.html
+++ b/pages/snacks.html
@@ -162,7 +162,7 @@ for (let i = 0; i < recipe.length; i++) {
     recipe_img.src = recipe[i].image_url;
     recipe_title.textContent = recipe[i].h2_cardtitle;
     recipe_description.textContent = recipe[i].message;
-    detail_btn.href = "./editrecipe.html?id=" + recipe[i].recipe_id;
+    detail_btn.href = "page4.html?id=" + recipe[i].recipe_id;
     detail_btn.innerText = "Details"
 
     div_recipe.appendChild(recipe_img);
