--- a/pages/useraddrecipe.html
+++ b/pages/useraddrecipe.html
@@ -52,6 +52,7 @@
         let Step2 = document.getElementById("Step2").value
         let Step3 = document.getElementById("Step3").value
         let Step4 = document.getElementById("Step4").value
+        let Step5 = document.getElementById("Step5").value
         let recipe_id = Date.now();
         let newrecipe = {
           image_url: Image,
@@ -62,6 +63,7 @@
           Step2:Step2,
           Step3:Step3,
           Step4:Step4,
+          Step5:Step5,
           Varities:text,
           recipe_id:recipe_id,
         }
@@ -71,6 +73,7 @@
         window.location.href = "./non-veg.html";
         alert("submitted")
       });
+     
     </script>
 </body>
 </html>
