--- a/pages/profile.html
+++ b/pages/profile.html
@@ -8,7 +8,6 @@
   <title>profile</title>
 </head>
 <body>
-     
   <form class="profile" id="profileform">
     <div class="form-group">
         <label for="name">Name:</label>
@@ -18,10 +17,8 @@
         <label for="email">Email:</label>
         <input disabled type="email" class="form-control personEmail" id="email" placeholder="Enter your email" />
     </div>
-
-    
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <button type="submit"  id ="delete" class="btn btn-primary">Delete</button>
+    <button type="submit" class="btn">Submit</button>
+    <button type="submit"  id ="delete" class="btn">Delete</button>
 
     </form>
 <script>
