--- a/pages/veg.html
+++ b/pages/veg.html
@@ -39,7 +39,7 @@
                 Snacks
             </button>
         </a>
-        <a href="./addnon.html">
+        <a href="./useraddrecipe.html">
             <button class="Veg-Recipe">
                 Add New
             </button>
