--- a/pages/non-veg.html
+++ b/pages/non-veg.html
@@ -38,7 +38,7 @@
                 Snacks
             </button>
         </a>
-        <a href="./addnon.html">
+        <a href="./useraddrecipe.html">
             <button class="Veg-Recipe">
                 Add New
             </button>
@@ -98,42 +98,7 @@
             console.log(div_recipe);
             document.querySelector(".all-recipe").append(div_recipe);
         }
-    //  <footer class="footer">
-    //     <div class="container">
-    //         <div class="row">
-    //             <div class="footer-col">
-    //                 <h3>Company</h3>
-    //                 <ul>
-    //                     <li><a href="#healthy">Healthy</a></li>
-    //                     <li><a href="#teasty">Teasty</a></li>
-    //                     <li><a href="#energy">Energyu</a></li>
-    //                     <li><a href="#like">like</a></li>
-    //                 </ul>
-    //             </div>
-    //             <div class="footer-col">
-    //                 <h3> Get help</h3>
-    //                 <ul>
-    //                     <li><a href="#video">Video</a></li>
-    //                     <li><a href="#ingredients">Ingredients</a></li>
-    //                     <li><a href="#steps">Steps</a></li>
-    //                     <li><a href="#tips">Tips</a></li>
-    //                 </ul>
-    //             </div>
-    //             <div class="footer-col">
-    //                 <h3>online</h3>
-    //                 <ul>
-    //                     <li><a href="#video">Video</a></li>
-    //                     <li><a href="#ingredients">Ingredients</a></li>
-    //                     <li><a href="#steps">Steps</a></li>
-    //                     <li><a href="#tips">Tips</a></li>
-    //                 </ul>
-    //             </div>
-
-
-    //         </div>
-    //     </div>
-    // </footer> 
-
+    
 </script>
 </body>
 
