--- a/pages/snacks.html
+++ b/pages/snacks.html
@@ -80,7 +80,7 @@
         recipe_img.setAttribute("src",recipe[i].image_url );
         recipe_title.textContent = recipe[i].h2_cardtitle;
         recipe_description.textContent = recipe[i].message;
-        detail_btn.href = "page4.html?id=" + recipe[i].recipe_id;
+        detail_btn.href = "details.html?id=" + recipe[i].recipe_id;
         detail_btn.innerText = "Details";
 
         div_recipe.appendChild(recipe_img);
