--- a/pages/useraddrecipe.html
+++ b/pages/useraddrecipe.html
@@ -12,10 +12,8 @@
         <input type="text" required="" id="recipename">
         <label for="head">About</label>
         <input type="text"  id="About">
-        <label for="head">Ingredient</label>
+        <label for="head">Ingredient1</label>
         <input type="text"  id="Ingredient">
-        <!-- <label for="head">Ingredient1</label>
-        <input type="text"  id="Ingredient1">
         <label for="head">Ingredient2</label>
         <input type="text"  id="Ingredient2">
         <label for="head">Ingredient3</label>
@@ -27,9 +25,11 @@
         <label for="head">Ingredient6</label>
         <input type="text"  id="Ingredient6">
         <label for="head">Ingredient7</label>
-        <input type="text"  id="Ingredient7"> 
+        <input type="text"  id="Ingredient7">
         <label for="head">Ingredient8</label>
-        <input type="text" required="" id="Ingredient8">-->
+        <input type="text"  id="Ingredient8">
+        
+        
         <label for="head">Step1</label>
         <input type="text" required="" id="Step1">
         <label for="head">Step2</label>
@@ -70,15 +70,15 @@
         const para = document.getElementById("recipename").value
         const about = document.getElementById("About").value
         const ingredients = document.getElementById("Ingredient").value
-        // const ingre1 = document.getElementById("Ingredient1").value;
-        // console.log( ingredient1);
-        // const ingre2 = document.getElementById("Ingredient2").value
-        // const ingredient3 = document.getElementById("Ingredient3").value
-        // const ingredient4 = document.getElementById("Ingredient4").value
-        // const ingredient5 = document.getElementById("Ingredient5").value
-        // const ingredient6 = document.getElementById("Ingredient6").value
-        // const ingredient7 = document.getElementById("Ingredient7").value
-        // const ingredient8 = document.getElementById("Ingredient8").value
+        const ingredient2 = document.getElementById("Ingredient2").value
+        const ingredient3 = document.getElementById("Ingredient3").value
+        const ingredient4 = document.getElementById("Ingredient4").value
+        const ingredient5 = document.getElementById("Ingredient5").value
+        const ingredient6 = document.getElementById("Ingredient6").value
+        const ingredient7 = document.getElementById("Ingredient7").value
+        const ingredient8 = document.getElementById("Ingredient8").value
+
+
         const Step1 = document.getElementById("Step1").value
         const Step2 = document.getElementById("Step2").value
         const Step3 = document.getElementById("Step3").value
@@ -92,14 +92,13 @@
           h2_cardtitle: para,
           message: about,
           ingredients: ingredients,
-          // ingre1: Ingredient1,
-          // ingre2:Ingredient2,
-          // ingredient3:Ingredient3,
-          // ingredient4:Ingredient4,
-          // ingredient5:Ingredient5,
-          // ingredient6:Ingredient6,
-          // ingredient7:Ingredient7,
-          // ingredient8:Ingredient8,
+          ingredient2:ingredient2,
+          ingredient3:ingredient3,
+          ingredient4:ingredient4,
+          ingredient5:ingredient5,
+          ingredient6:ingredient6,
+          ingredient7:ingredient7,
+          ingredient8:ingredient8,
           Step1:Step1,
           Step2:Step2,
           Step3:Step3,
